nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"name":"gate-ingress","namespace":"default"},"spec":{"rules":[{"host":"gate-spin.curebay.hyd-dev.opsmx.net","http":{"paths":[{"backend":{"service":{"name":"spin-gate","port":{"number":8084}}},"path":"/","pathType":"ImplementationSpecific"}]}}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2024-04-01T07:22:55Z"
  generation: 1
  name: gate-ingress
  namespace: default
  resourceVersion: "21950305"
  uid: eef2169c-aa46-4aeb-982d-321d6a95c809
spec:
  rules:
  - host: gate-spin.curebay.hyd-dev.opsmx.net
    http:
      paths:
      - backend:
          service:
            name: spin-gate
            port:
              number: 8084
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
